# superscore

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  dev-requirements.txt  docs-requirements.txt  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: standard.yml
conda-recipe/: meta.yaml
docs/: classes.dot
docs/source/: api.rst  conf.py  developer_docs.rst  index.rst  model.rst  releases.rst
master/: .buildinfo  api.html  developer_docs.html  genindex.html  index.html  model.html  objects.inv  py-modindex.html  releases.html  search.html  searchindex.js  upcoming_changes.html
master/_autosummary/: superscore.backends.core.SearchTerm.html  superscore.backends.core.html  superscore.backends.core.populate_backend.html  superscore.backends.directory.DirectoryBackend.html  superscore.backends.directory.html  superscore.backends.filestore.FilestoreBackend.html  superscore.backends.filestore.html  superscore.backends.get_backend.html  superscore.backends.html  superscore.backends.test.TestBackend.html  superscore.backends.test.html  superscore.client.Client.backend.html  superscore.client.Client.cl.html  superscore.client.Client.enable_editing_past.html  (+36 more)
superscore/: __main__.py  client.py  color.py  compare.py  errors.py  exception.py  model.py  permission_manager.py  qt_helpers.py  search_term.py  serialization.py  templates.py  type_hints.py  utils.py  validation.py  visitor.py
v0.0.1/: api.html  genindex.html  model.html  releases.html  search.html  upcoming_changes.html
(+285 files in other folders)
